# pesticide

./: Cargo.toml  README.md
.cargo/: config.toml
bak/: bak_lib.rs
example/: Cargo.toml
example/src/: main.rs
pesticide/: Cargo.toml
pesticide/src/: lib.rs  proc_macro_meta.rs
src/: lib.rs
src/utils/: mod.rs  proc_macro_meta.rs
